Fix typing and large screen alignment

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,6 @@ a {
   color: #0074d9;
   list-style-type: none;
   text-decoration: none;
-  padding: .25em;
 }
 
 a:hover {
@@ -49,10 +48,14 @@ a:hover {
   color: #fff;
 }
 
-/* @media only screen and (min-width: 38em) {
+@media only screen and (min-width: 38em) {
 
   h1 {
     text-align: left;
   }
 
-} */
+  nav {
+    text-align: right;
+  }
+
+}
